Subida de test con Mockito corregido en el POM
Puesto que Mockito tenía errores, subí la versión y añadí los tests corregidos para los errores de paquetes y del REST service de glassfish.
Hasta ahora, 16 tests.