@@ -39,15 +39,23 @@
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>5.11.0</version>
+        <version>5.20.0</version>
         <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-junit-jupiter</artifactId>
-        <version>5.11.0</version>
+        <version>5.20.0</version>
         <scope>test</scope>
     </dependency>
+    
+    <dependency>
+        <groupId>net.bytebuddy</groupId>
+        <artifactId>byte-buddy</artifactId>
+        <version>1.14.12</version> 
+        <scope>test</scope>
+    </dependency>
+    
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
@@ -105,12 +113,15 @@
         </execution>
     </executions>
 </plugin>
+
+
 <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>3.5.4</version>
     <configuration>
         <argLine>${argLine}</argLine> 
+        <argLine>-Dnet.bytebuddy.experimental=true ${argLine}</argLine>
     </configuration>
 </plugin>
             <plugin>
